--- a/Air-quality-companion/Air-quality-companion/basic/public/map.html
+++ b/Air-quality-companion/Air-quality-companion/basic/public/map.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="buttonGroup" class="btn-group-justified">
-        <div id="Alarm" class="btn btn-danger" data-toggle="modal" data-target="#setAlarmDialog">SET ALERT</div>
+        <div id="Alarm" class="btn btn-danger" data-toggle="modal" data-target="#setAlarmDialog">ALERT</div>
         <div id="Map" class="btn btn-light">MAP</div>
         <div id="Calendar" class="btn btn-success">GUIDE</div>
     </div>
