--- a/Air-quality-companion/Air-quality-companion/basic/public/index.html
+++ b/Air-quality-companion/Air-quality-companion/basic/public/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div id="buttonGroup" class="btn-group-justified">
-    <div id="Alarm" class="btn btn-danger">SET ALERT</div>
+    <div id="Alarm" class="btn btn-danger">ALERT</div>
     <div id="Map" class="btn btn-light">MAP</div>
     <div id="Calendar" class="btn btn-success" data-toggle="modal" data-target="#guideDialog">GUIDE</div>
   </div>
